--- a/package.json
+++ b/package.json
@@ -11,50 +11,51 @@
     "preview-https": "serve dist",
     "test": "vitest",
     "test:unit": "vitest",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit",
+    "build-xdc": "pnpm build; ./create-xdc.sh"
   },
   "dependencies": {
-    "@unocss/reset": "^0.45.28",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/head": "^0.9.7",
+    "@unocss/reset": "^0.45.30",
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/head": "^0.9.8",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.22",
+    "pinia": "^2.0.26",
     "pug": "^3.0.2",
-    "sass": "^1.55.0",
-    "vue": "^3.2.40",
+    "sass": "^1.56.1",
+    "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
-    "@iconify-json/carbon": "^1.1.8",
+    "@iconify-json/carbon": "^1.1.11",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vue/test-utils": "^2.1.0",
-    "@volar/vue-language-plugin-pug": "^1.0.8",
-    "@unocss/extractor-pug": "^0.45.29",
+    "@unocss/extractor-pug": "^0.45.30",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@volar/vue-language-plugin-pug": "^1.0.9",
+    "@vue/test-utils": "^2.2.4",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.24.0",
+    "eslint": "^8.28.0",
     "https-localhost": "^4.7.1",
-    "pnpm": "^7.13.2",
-    "typescript": "^4.8.4",
-    "unocss": "^0.45.28",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.6",
-    "vite-plugin-inspect": "^0.7.5",
+    "pnpm": "^7.17.0",
+    "typescript": "^4.9.3",
+    "unocss": "^0.45.30",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.11",
+    "vite": "^3.2.4",
+    "vite-plugin-inspect": "^0.7.9",
     "vite-plugin-pages": "^0.26.0",
-    "vite-plugin-pwa": "^0.13.1",
+    "vite-plugin-pwa": "^0.13.3",
     "vite-plugin-vue-component-preview": "^0.3.3",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vue-markdown": "^0.22.1",
-    "vite-ssg": "^0.21.0",
+    "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
-    "vitest": "^0.24.0",
-    "vue-tsc": "^1.0.8",
-    "webxdc-dev": "git://github.com/Septias/webxdc-dev.git#cli-usable"
+    "vitest": "^0.24.5",
+    "vue-tsc": "^1.0.9",
+    "webxdc-dev": "github:Septias/webxdc-dev#cli-usable"
   }
 }
